# AskMyDocs

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  composer.json  docs_frontend_react.md  mcp_exposure_notes.md  package-lock.json  package.json  phpunit.xml  playwright.config.ts  tailwind.config.ts  vite.config.ts  vite.widget.config.ts  vitest.config.mjs  vitest.config.ts
.github/: copilot-instructions.md
bootstrap/: app.php  providers.php
config/: admin.php  ai-act-compliance.php  ai-finops-admin.php  ai-finops.php  ai-guardrails-admin.php  ai-guardrails.php  ai.php  askmydocs.php  auth.php  chat-log.php  compliance.php  connectors.php  cors.php  eval-harness-ui.php  eval-harness.php  evidence-risk-review.php  filesystems.php  flow-admin.php  invitations-admin.php  invitations.php  invite.php  kb-pipeline.php  kb.php  laravel-flow.php  mcp-pack.php  mcp.php  pii-redactor-admin.php  queue.php  rbac.php  sanctum.php  widget.php
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
docs-site/: README.md  admin-panel.mdx  agentic-knowledge-reports.mdx  ai-finops.mdx  ai-guardrails.mdx  ai-providers.mdx  anti-hallucination-firewall.mdx  auto-wiki.mdx  canonical-and-promotion.mdx  chat-and-retrieval.mdx  configuration.mdx  connectors-credential.mdx  connectors-imap-serialization.mdx  connectors-multi-account.mdx  connectors-sync-settings.mdx  connectors.mdx  core-concepts.mdx  (+26 more)
(+2450 files in other folders)
