[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
# HTTP requests issued from the Rust side so they bypass the webview's CORS
# enforcement — the backend needs no tauri:// origin in its CORS allow-list.
tauri-plugin-http = "2"
# Local persistence for the Bearer token and the offline conversation threads.
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

